# unitpy

./: .env  LICENSE.txt  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: tests.yml
examples/: example1.py  example2.py  example_numpy.py
src/unitpy/: __init__.py  config.py  conversions.py  core.py  errors.py  ledger.py  measurement.py  numpy_funcs.py  quantity.py  unit.py  unit_parsing.py
src/unitpy/definitions/: NIST_official_units.py  constants.py  core.py  dimensions.py  entry.py  ledger.py  metric.py  metric_system.txt  prefix.py  unit_NIST.py  unit_base.py  unit_derived.py  unit_extra.py
src/unitpy/utils/: equation_formating.py  parsing.py  string_converter.py
tests/: main.py  parsing_test.py  test_define_quantity.py  test_define_unit.py  test_dimensions.py  test_numpy.py  test_parsing_unit.py  test_pickle.py  test_quanitiy_math_operations.py  test_unit_conversion.py
tests/performance/: benchmark.py  performance.csv
