[metadata]
name = unitpy
version = 0.0.2
description = Working with scientific units in python.
long_description = file: README.md
long_description_content_type = text/markdown
author = Dylan Walsh
url = https://github.com/dylanwal/unitpy
license = BSD
license_files = LICENSE.txt
platforms = any
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7

[options]
setup_requires =
    setuptools
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.7
zip_safe = no
include_package_data = true

[options.packages.find]
where = src